LOC-455 Fixing widget donate button css so the button/text doesn't overflow the widget's boundary.

--- a/public/css/partials/_widget.scss
+++ b/public/css/partials/_widget.scss
@@ -69,6 +69,10 @@
 	      .primary-text{
 		      font-size: 90%;
 	      }
+
+        .btn--donate {
+          white-space: normal;
+        }
       }
     }
   }
